Fix header on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #F5F5F5;
-  color: #333;
+  background-color: #e9e9e9;
   padding-top: 60px;
   line-height: 1.6em;
 }
@@ -29,13 +28,6 @@ header {
   top: 0; 
 }
 
-.rightli {
-  font-size: 2.0em;
-  float:right;
-  position: relative;
-  bottom: 5px;
-}
-
 nav ul {
   padding: 0;
   list-style: none;
@@ -45,12 +37,14 @@ nav ul {
   font-size: 1.4em;
   font-weight: bolder;
   margin: 0px 20px;
-  vertical-align: middle;
-  display: inline-block;
+}
+.header_links {
+  margin-left: 250px;
+  margin-top: -10px;
 }
 
 nav ul li {
-  align-items: center; /* Align icons vertically in the center */
+  align-items: center;
   display: inline-block;
   vertical-align: middle;
 }
@@ -59,7 +53,6 @@ nav ul li a {
   text-decoration: none;
   transition: background-color 0.3s ease;
   padding: 10px 10px;
-  vertical-align: middle;
 }
 
 nav ul li a:hover {
@@ -68,44 +61,28 @@ nav ul li a:hover {
   background-color: #555;
 }
 
-/*
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  background-color: #555;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-nav ul li a:hover {
-  background-color: #777;
-}
-
-nav ul li i {
-  font-size: 1.5em;
-  top: 3px;
-  position: relative;
-}
-
-.fab.fa-linkedin {
-  font-size: 2.5em;
-}
-*/
-
 /* Media Query for Mobile Screens */
 @media (max-width: 600px) {
-  .bodycontainer {
-    padding: 50px 10px; /* Add some padding */
+  .headercontainer {
+    width: 100%;
+    margin: 0 auto;
   }
-  .name {
-    display: block; /* Ensure name is on its own line */
-    width: 100%; /* Make each link full width */
-    padding: 10px 10px; /* Add some padding */
-    font-size: 1em; /* Smaller font size for mobile */
+  .bodycontainer {
+    padding: 100px 10px;
   }
   nav ul li {
-    display: block; /* Stack the elements vertically */
-    padding: 3px 10px; /* Add some padding */
+    padding: 10px 15px;
+  }
+  .name {
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+    text-align: center;
+  }
+  .header_links {
+    margin-left: 0;
+    margin-top: 20px;
   }
 }
